# springone2gx2013

./: .gitignore  README.md
ios/Streamer/: AppDelegate.m  Streamer-Info.plist  Streamer-Prefix.pch  ViewController.h  ViewController.m
ios/Streamer.xcodeproj/: project.pbxproj
ios/Streamer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/Streamer/CV/: CVServer.h  CVServer.mm  DocumentPreflight.h  DocumentPreflight.m  ImageEncoder.h  ImageEncoder.m  MJPEGReader.h  MJPEGReader.m
ios/Streamer/en.lproj/: ViewController.xib
ios/UnittWebSocketClient/: HandshakeHeader.m  MutableQueue.m  WebSocket.m  WebSocket00.h  WebSocket00.m  WebSocket07.h  WebSocket07.m  WebSocket08.h  WebSocket08.m  WebSocket10.h  WebSocket10.m  WebSocketConnectConfig.m  WebSocketFragment.m  WebSocketMessage.m
ios/UnittWebSocketClient.xcodeproj/: project.pbxproj
ios/UnittWebSocketClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/WebSocket/: AppDelegate.h  AppDelegate.m  WebSocket-Info.plist  main.m
ios/WebSocket.xcodeproj/: project.pbxproj
ios/ios.xcworkspace/: contents.xcworkspacedata
jvm/: build.sbt
jvm/project/: Dependencies.scala  build.scala  plugins.sbt
native/: build.sh  im.cpp  im.h  rabbit.cpp  rabbit.h
native/rabbitmq-c/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  librabbitmq.pc
native/rabbitmq-cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  install_manifest.txt
native/recog/: CMakeLists.txt
native/recog/src/: CMakeLists.txt  coins.cpp  coins.h  main.cpp  main.h
native/recog/test/: CMakeLists.txt  coins.cpp  rings.cpp
slides/: arch.graffle  beans.graffle  flow.graffle  internalflow.graffle  overallcli.graffle  overallweb.graffle  slides.key
(+55 files in other folders)
